<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name of the application. [CHAR LIMIT=35] -->
    <string name="app_label">Input Devices for Japanese</string>

    <!-- Keyboard layouts label, used to describe the set of all built-in layouts in the UI. [CHAR LIMIT=35] -->
    <string name="keyboard_layouts_label">Japanese keyboard</string>

    <!-- Japanese OADG keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_japanese_oadg_label">Japanese 106/109 (OADG)</string>

    <!-- Japanese OADG (switch Ctrl-Caps) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_japanese_switch_cc_label">Japanese 106/109 (OADG, Ctrl-Caps)</string>

    <!-- Japanese OADG (switch Esc-Kanji) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_japanese_switch_ek_label">Japanese 106/109 (OADG, Esc-半/全)</string>

    <!-- Japanese OADG (switch Ctrl-Caps, Esc-Kanji) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_japanese_switch_cc_ek_label">Japanese 106/109 (OADG, C-C, E-H/Z)</string>

    <!-- Japanese OADG (Win to HOME) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_japanese_win2home_label">Japanese 106/109 (OADG, Win-&gt;HOME)</string>

    <!-- Japanese OADG (for IME) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_japanese_ime_label">Japanese 106/109 (IME)</string>

    <!-- Japanese OADG (for IME, switch Ctrl-Caps) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_japanese_ime_cc_label">Japanese 106/109 (IME, Ctrl-Caps)</string>

    <!-- Japanese OADG (for IME, switch Esc-Kanji) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_japanese_ime_ek_label">Japanese 106/109 (IME, E-半/全)</string>

    <!-- Japanese OADG (for IME, switch Ctrl-Caps, Esc-Kanji) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_japanese_ime_cc_ek_label">Japanese 106/109 (IME, C-C, E-H/Z)</string>

    <!-- Japanese OADG (for IME, Win to HOME) keyboard layout label. [CHAR LIMIT=35] -->
    <string name="keyboard_layout_japanese_ime_w2h_label">Japanese 106/109 (IME, Win-&gt;HOME)</string>
</resources>
